# clever

./: .gitignore  LICENSE  README.md  pyproject.toml  temp.py
.github/workflows/: deploy-pages.yml  lean_action_ci.yml
docs/: leaderboard.html
src/clever_bench/: benchmark.py  lean_parser_spec.py  lean_problem.py  setup.py  task.py
src/human_eval_rust/: 0.rs  10.rs  105.rs  107.rs  108.rs  11.rs  110.rs  111.rs  112.rs  113.rs  115.rs  116.rs  117.rs  119.rs  12.rs  121.rs  124.rs  125.rs  128.rs  129.rs  130.rs  131.rs  133.rs  134.rs  137.rs  139.rs  14.rs  142.rs  143.rs  148.rs  15.rs  150.rs  152.rs  156.rs  159.rs  16.rs  160.rs  161.rs  163.rs  17.rs  (+56 more)
src/lean4/: .gitignore  README.md  lake-manifest.json  lakefile.lean  task_summary.json
src/lean4/Imports/: AllImports.lean
src/lean4/ProgVer/: human_eval_120-163.lean
src/lean4/human_eval/: README.md  problem_0.lean  problem_1.lean  problem_10.lean  problem_100.lean  problem_101.lean  problem_102.lean  problem_103.lean  problem_104.lean  problem_105.lean  problem_106.lean  problem_107.lean  problem_108.lean  problem_109.lean  problem_11.lean  problem_110.lean  problem_111.lean  problem_112.lean  problem_113.lean  problem_114.lean  problem_115.lean  problem_116.lean  problem_117.lean  problem_118.lean  problem_119.lean  problem_12.lean  problem_120.lean  problem_121.lean  problem_122.lean  problem_123.lean  problem_124.lean  problem_125.lean  problem_126.lean  problem_127.lean  problem_128.lean  problem_129.lean  (+128 more)
src/scripts/: score_solutions.py
src/tests/: test_lean_parser.py  test_task.py
(+81 files in other folders)
